[package]
name = "py-kola"
version.workspace = true
edition = "2021"

[lib]
name = "kola"
crate-type = ["cdylib"]

[dependencies]
kola = { path = "../crates/kola" }
pyo3 = { version = "0.21.0", features = ["extension-module", "chrono"] }
thiserror = "1.0.58"
pyo3-polars = "0.12.0"
chrono = "0.4.37"

[dependencies.polars]
workspace = true

[profile.opt-dev]
strip = "symbols"
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
