[package]
name = "py-kola"
version.workspace = true
edition = "2021"

[lib]
name = "kola"
crate-type = ["cdylib"]

[dependencies]
kola = { path = "../crates/kola" }
pyo3 = { version = "0.22.2", features = ["extension-module", "chrono"] }
thiserror = "1.0.63"
pyo3-polars = { version = "0.16.1", features = [
  "dtype-categorical",
  "dtype-array",
  "dtype-full",
] }
chrono = "0.4.38"
indexmap = "2.4.0"

[dependencies.polars]
workspace = true

[profile.opt-dev]
strip = "symbols"
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
