[package]
name = "py-kola"
version.workspace = true
edition = "2021"

[lib]
name = "kola"
crate-type = ["cdylib"]

[dependencies]
kola = { path = "../crates/kola" }
pyo3 = { version = "0.25.1", features = ["extension-module", "chrono"] }
thiserror = "2.0.12"
pyo3-polars = { version = "0.22.0", features = [
  "dtype-categorical",
  "dtype-array",
  "dtype-full",
] }
chrono = "0.4.38"
indexmap = "2.8.0"

[dependencies.polars]
workspace = true

[profile.opt-dev]
strip = "symbols"
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg()'] }
