[build-system]
requires = ["maturin @ git+https://github.com/PyO3/maturin.git@main"]
build-backend = "maturin"

[project]
name = "kola"
description = "a Python Polars interface to kdb+/q"
readme = "README.md"
authors = [{ name = "Jo Shinonome", email = "jo.shinonome@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["q", "kdb", "polars", "dataframe", "arrow"]
dynamic = ["version"]
dependencies = ['polars >= 1.4.1', 'pyarrow >= 7.0.0']

[tool.maturin]
include = ["rust-toolchain.toml"]

[project.urls]
Repository = "https://github.com/jshinonome/kola"
