[build-system]
requires = ["maturin>=1.7.4"]
build-backend = "maturin"

[project]
name = "kola"
description = "a Python Polars interface to j* and q"
readme = "README.md"
authors = [{ name = "Jo Shinonome", email = "jo.shinonome@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
keywords = ["j*", "q", "kdb", "polars", "dataframe", "arrow"]
dynamic = ["version"]
dependencies = ['polars >= 1.21.0', 'pyarrow >= 20.0.0']

[tool.maturin]
include = ["rust-toolchain.toml"]

[project.urls]
Repository = "https://github.com/jshinonome/kola"
