[package]
name = "kola"
version.workspace = true
edition = "2021"

[lib]
name = "kola"
crate-type = ["lib"]

[dependencies]
native-tls = "0.2.12"
chrono = "0.4.38"
polars-arrow = { workspace = true }
thiserror = "1.0.63"
rayon = "1.10.0"
uuid = "1.10.0"
lz4_flex = { version = "0.11.3", features = ["frame"] }

[dependencies.polars]
workspace = true
features = [
  "dtype-categorical",
  "dtype-array",
  "dtype-duration",
  "dtype-u8",
  "dtype-i16",
  "dtype-datetime",
  "dtype-date",
  "dtype-time",
]

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3", "xxh32"]
