[package]
name = "kola"
version.workspace = true
edition = "2021"

[lib]
name = "kola"
crate-type = ["lib"]

[dependencies]
native-tls = "0.2.14"
chrono = "0.4.40"
polars-arrow = { workspace = true }
thiserror = "2.0.12"
rayon = "1.10.0"
uuid = "1.16.0"
lz4_flex = { version = "0.11.3", features = ["frame"] }
indexmap = "2.8.0"

[dependencies.polars]
workspace = true
features = [
  "dtype-categorical",
  "dtype-array",
  "dtype-duration",
  "dtype-u8",
  "dtype-i16",
  "dtype-datetime",
  "dtype-date",
  "dtype-time",
  "ipc",
  "serde",
]

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3", "const_xxh3", "xxh32"]
